Fix issue with horizontal scroll-bar below the profile container.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -519,12 +519,6 @@ table {
 
 /* PROFILE STYLES */
 
-#profile-container {
-    /*
-    margin: 0% 3% 0% 3%;
-    */
-    overflow: auto;
-}
 .profile-header {
     background-image: url(/static/bg.jpg);
     background-repeat: no-repeat;
